# sms-tracker

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/tauri-plugin-sms/: Cargo.toml  README.md  build.rs  package.json
apps/tauri-plugin-sms/android/: build.gradle.kts
apps/tauri-plugin-sms/android/src/androidTest/java/: SmsInstrumentedTest.kt
apps/tauri-plugin-sms/android/src/main/: AndroidManifest.xml
apps/tauri-plugin-sms/android/src/main/java/: Sms.kt  SmsBroadcastReceiver.java  SmsPlugin.kt  SmsReceiver.kt
apps/tauri-plugin-sms/android/src/main/java/AppConstants/: AppConstants.kt
apps/tauri-plugin-sms/android/src/test/java/: SmsUnitTest.kt
apps/tauri-plugin-sms/examples/tauri-app/: package.json
apps/tauri-plugin-sms/examples/tauri-app/src/: App.svelte
apps/tauri-plugin-sms/examples/tauri-app/src-tauri/: Cargo.toml
apps/tauri-plugin-sms/examples/tauri-app/src-tauri/capabilities/: default.json
apps/tauri-plugin-sms/examples/tauri-app/src-tauri/src/: lib.rs
apps/tauri-plugin-sms/guest-js/: index.ts
apps/tauri-plugin-sms/permissions/: default.toml
apps/tauri-plugin-sms/permissions/autogenerated/: reference.md
apps/tauri-plugin-sms/permissions/autogenerated/commands/: send_sms.toml
apps/tauri-plugin-sms/permissions/schemas/: schema.json
apps/tauri-plugin-sms/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
apps/tracker/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/tracker/src-tauri/: Cargo.toml  tauri.conf.json
apps/tracker/src-tauri/capabilities/: default.json
apps/tracker/src-tauri/src/: lib.rs  (+1 more)
(+10 files in other folders)
